--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       
         <div id="no-downloads">
           <span class="inner">
+            Курсове по английски език за програмисти
           </span>
         </div>
       
@@ -93,7 +94,7 @@
           <span class="left-tail"></span>
           <span class="right-tail"></span>
         </span>
-        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
+
         <span class="octocat"></span>
       </footer>
 
