--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       
         <div id="no-downloads">
           <span class="inner">
-            Курсове по английски език за програмисти
+
           </span>
         </div>
       
@@ -79,7 +79,7 @@
 
       <section id="main_content">
         <h1 id="-">-</h1>
-<p>Английски език курсове, научи английски, Курсове по английски език за възрастни</p>
+<p>Английски език курсове, научи английски, Курсове по английски език за възрастни.             Курсове по английски език за програмисти.             Курсове по английски език за програмисти.</p>
 
       </section>
 
